[package]
name = "ai_test_util"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.26.0"
chrono = "0.4.38"
csv = "1.3.1"
dotenv = "0.15.0"
inline_colorization = "0.1.6"
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["full"] }
mlua = { version = "0.10.2", features = ["lua54", "vendored"] }
